--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -13,7 +13,7 @@
 ### General project setup
 general:
   pipeline: "sap-cloud-sdk"
-  buildTool: "mta"
+  buildTool: "npm"
 stages:
   Build:
     mavenExecutiveStaticCodeChecks: false
